@@ -74,7 +74,7 @@ protected:
   CDM::E_CDM_DTYPE              m_output_data_type;     ///<出力実数タイプ byte,short,int,float,double
   CDM::E_CDM_FORMAT             m_out_format;           ///<出力ファイルフォーマット sph,bov,avs,plot3d,vtk
   CDM::E_CDM_FILE_TYPE          m_out_file_type;        ///<出力形式 ascii,binary,FortranBinary
-  CDM::E_CDM_FILE_TYPE          m_out_file_type_coord;  ///<座標データの出力形式(AVSおよびVTK形式) ascii,binary
+  CDM::E_CDM_FILE_TYPE          m_out_file_type_coord;  ///<座標データの出力形式(AVS形式) ascii,binary
   E_CONV_OUTPUT_CONV_TYPE       m_conv_type;            ///<convertタイプ Mx1 MxN MxM
   CDM::E_CDM_ARRAYSHAPE         m_outputArrayShape;     ///<出力配列形状
   CDM::E_CDM_OUTPUT_FNAME       m_outputFilenameFormat; ///<出力ファイル名命名順
@@ -218,7 +218,7 @@ public:
 
   /**
    * @brief 座標データの出力形式の取り出し（ascii,binary)
-   * @details AVSおよびVTK形式で利用
+   * @details AVS形式で利用
    */
   CDM::E_CDM_FILE_TYPE
   Get_OutputFileTypeCoord() { return m_out_file_type_coord; };
